プライベートテンプレートノードを描画するときの無駄な処理を省いた